# food-explorer-backend_fastapi

./: .env  .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 381611e0fead_first_migration.py  409531a80776_update_uiid.py  526a373132fa_update_email.py  7283dd575741_updae_migration.py  75e3b6c57499_relationship_igredient.py  e0723f9712dc_colocando_img_url_no_produto.py  f7749c9603b1_relationship_igredient.py
src/: config.py  main.py  models.py  router.py  session_deps.py
src/auth/: models.py  routes.py  security.py  service.py
src/core/: config.py  database.py
src/products/: models.py  router.py  service.py
src/utils/: create_file.py
