[tool.poetry]
name = "food-explorer-back"
version = "0.1.0"
description = ""
authors = ["Bruno Borges <brunosb02@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
